phase 2 and 3
